# s3-file-uploader-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/uploader/: handler.py  logger.py  main.py  presigner.py  uploader.py
tests/: test_handler.py  test_presigner.py  test_uploader.py
