[tool.poetry]
name = "csv-to-s3-uploader"
description = "Upload CSV files to an S3 bucket via API Gateway and AWS Lambda — designed for serverless ingestion pipelines."
version = "0.1.0"
authors = ["Manuel Djirlic"]
readme = "README.md"
packages = [
  { include = "uploader", from = "src" }
]
package-mode = true
license = "MIT"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100

[tool.isort]
atomic = true
profile = "black"
line_length = 100
skip_gitignore = true

[tool.poetry.dependencies]
python = ">=3.13"
boto3 = "^1.37.35"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.1.2,<3.0.0"]
build-backend = "poetry.core.masonry.api"
